[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/camera/player cam/cam experiments/Camera Cont KinRay Decouple.gd" type="Script" id=1]




[sub_resource type="SphereShape" id=1]
radius = 0.5

[node name="Camera_Rig" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0 )
script = ExtResource( 1 )

[node name="Pivot" type="Spatial" parent="."]

[node name="Camera_Raycast" type="RayCast" parent="Pivot"]
visible = false
enabled = true
cast_to = Vector3( 0, 0, -8.5 )
collision_mask = 5

[node name="Camera_Collision" type="KinematicBody" parent="Pivot"]
transform = Transform( -1, 0, 3.25841e-07, 0, 1, 0, -3.25841e-07, 0, -1, 1.42109e-14, 0, -8 )
visible = false
input_ray_pickable = false
collision_layer = 0
collision_mask = 5

[node name="CollisionShape" type="CollisionShape" parent="Pivot/Camera_Collision"]
shape = SubResource( 1 )

[node name="Camera_Position" type="Spatial" parent="Pivot"]
transform = Transform( -1, 0, 3.25841e-07, 0, 1, 0, -3.25841e-07, 0, -1, 0, 0, -8.5 )

[node name="Camera_Position_Default" type="Spatial" parent="Pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -8.5 )

[node name="Tween" type="Tween" parent="."]
